--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
     id 'kotlin-kapt'
+    id 'com.google.gms.google-services'
 }
 
 android {
@@ -55,7 +56,7 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     //GSON manejar json
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
-    //Corritutinas
+    //Corrutinas
     implementation("org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4")
     implementation("androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1")
     implementation("androidx.lifecycle:lifecycle-runtime-ktx:2.5.1")
@@ -69,4 +70,10 @@ dependencies {
     implementation "androidx.room:room-ktx:2.5.0"
     //Material
     implementation 'com.google.android.material:material:1.8.0'
+
+    //Firebase
+    implementation platform('com.google.firebase:firebase-bom:31.2.0')
+    implementation 'com.google.firebase:firebase-analytics-ktx'
+    implementation 'com.google.firebase:firebase-auth-ktx'
+    implementation 'com.google.android.gms:play-services-auth:20.4.1'
 }
