--- a/app/build.gradle
+++ b/app/build.gradle
@@ -72,8 +72,8 @@ dependencies {
     implementation 'com.google.android.material:material:1.8.0'
 
     //Firebase
-    implementation platform('com.google.firebase:firebase-bom:31.2.0')
-    implementation 'com.google.firebase:firebase-analytics-ktx'
-    implementation 'com.google.firebase:firebase-auth-ktx'
-    implementation 'com.google.android.gms:play-services-auth:20.4.1'
+    //implementation platform('com.google.firebase:firebase-bom:31.2.0')
+    //implementation 'com.google.firebase:firebase-analytics-ktx'
+    //implementation 'com.google.firebase:firebase-auth-ktx'
+    //implementation 'com.google.android.gms:play-services-auth:20.4.1'
 }
