--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,50 +1,57 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+        xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
-        android:allowBackup="true"
-        android:dataExtractionRules="@xml/data_extraction_rules"
-        android:fullBackupContent="@xml/backup_rules"
-        android:icon="@drawable/logo_blue"
-        android:label="@string/app_name"
-        android:roundIcon="@drawable/logo_blue"
-        android:supportsRtl="true"
-        android:theme="@style/Theme.DreamMe"
-        tools:targetApi="31">
+            android:allowBackup="true"
+            android:dataExtractionRules="@xml/data_extraction_rules"
+            android:fullBackupContent="@xml/backup_rules"
+            android:icon="@drawable/logo_blue"
+            android:label="@string/app_name"
+            android:roundIcon="@drawable/logo_blue"
+            android:supportsRtl="true"
+            android:theme="@style/Theme.DreamMe"
+            tools:targetApi="31">
         <activity
-            android:name=".ui.activities.PrincipalActivity"
-            android:exported="false">
+                android:name=".ui.activities.ImagenActivity"
+                android:exported="false">
             <meta-data
-                android:name="android.app.lib_name"
-                android:value="" />
+                    android:name="android.app.lib_name"
+                    android:value="" />
         </activity>
         <activity
-            android:name=".ui.activities.RegisterActivity"
-            android:exported="false">
+                android:name=".ui.activities.PrincipalActivity"
+                android:exported="false">
             <meta-data
-                android:name="android.app.lib_name"
-                android:value="" />
+                    android:name="android.app.lib_name"
+                    android:value="" />
         </activity>
         <activity
-            android:name=".ui.activities.LoginActivity"
-            android:exported="false">
+                android:name=".ui.activities.RegisterActivity"
+                android:exported="false">
             <meta-data
-                android:name="android.app.lib_name"
-                android:value="" />
+                    android:name="android.app.lib_name"
+                    android:value="" />
         </activity>
         <activity
-            android:name=".ui.activities.MainActivity"
-            android:exported="false">
+                android:name=".ui.activities.LoginActivity"
+                android:exported="false">
             <meta-data
-                android:name="android.app.lib_name"
-                android:value="" />
+                    android:name="android.app.lib_name"
+                    android:value="" />
         </activity>
         <activity
-            android:name=".ui.activities.SplashScreen"
-            android:exported="true">
+                android:name=".ui.activities.MainActivity"
+                android:exported="false">
+            <meta-data
+                    android:name="android.app.lib_name"
+                    android:value="" />
+        </activity>
+        <activity
+                android:name=".ui.activities.SplashScreen"
+                android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -52,13 +59,13 @@
             </intent-filter>
 
             <meta-data
-                android:name="android.app.lib_name"
-                android:value="" />
+                    android:name="android.app.lib_name"
+                    android:value="" />
         </activity>
 
         <meta-data
-            android:name="preloaded_fonts"
-            android:resource="@array/preloaded_fonts" />
+                android:name="preloaded_fonts"
+                android:resource="@array/preloaded_fonts" />
     </application>
 
 </manifest>
