--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,9 @@
         xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"
+                                    tools:ignore="ScopedStorage" />
+
 
     <application
             android:allowBackup="true"
@@ -14,6 +17,15 @@
             android:supportsRtl="true"
             android:theme="@style/Theme.DreamMe"
             tools:targetApi="31">
+        <provider
+                android:authorities="${applicationId}.fileprovider"
+                android:name="androidx.core.content.FileProvider"
+                android:exported="false"
+                android:grantUriPermissions="true">
+            <meta-data
+                    android:name="android.support.FILE_PROVIDER_PATHS"
+                    android:resource="@xml/file_paths"/>
+        </provider>
         <activity
                 android:name=".ui.activities.ImagenActivity"
                 android:exported="false">
@@ -66,6 +78,7 @@
         <meta-data
                 android:name="preloaded_fonts"
                 android:resource="@array/preloaded_fonts" />
+
     </application>
 
 </manifest>
